fix: Color contrast issues on input fields with errors

--- a/client/src/css/app.sass
+++ b/client/src/css/app.sass
@@ -251,6 +251,16 @@ body.body--dark
         .q-icon.text-red
             color: $negative !important
 
+    .q-field__control
+        color: #fff
+
+    .q-field--error .q-field__bottom,
+    .text-negative
+        color: #d7419a !important
+
+    .text-negative .q-field__label
+        color: #ff6e9f !important
+
 @media (prefers-reduced-motion)
     *
         transition: none !important
